--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,10 @@
   font-size: 19px;
   padding: 29px 69px;
 }
+
+img{
+  max-width:180px;
+}
+input[type=file]{
+padding:10px;
+background:#2d2d2d;}
