--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   align-items: center;
   
 }
+ 
 
 .box{
   width: 431px;
@@ -19,11 +20,12 @@
 #result{
   font-size: 19px;
   padding: 29px 69px;
+  position: absolute;
+  top: 1.2rem;
+  background: #ddd;
+  border: 1px solid #bfbfbf;
+  border-radius: 18px;
+  color: #1b1b1b;
+  font-weight: 500;
 }
 
-img{
-  max-width:180px;
-}
-input[type=file]{
-padding:10px;
-background:#2d2d2d;}
